@@ -60,6 +60,10 @@ as elegant as TMDA."<br>
 Vincent Danen on the <em>tmda-users mailing list</em>
 <br><br>
 
+"Email is no longer a dreaded advertising nightmare."<br>
+Ed Colmar on the <em>tmda-users mailing list</em>
+<br><br>
+
 "Thanks to TMDA, I don't care if my raw address (matt@lickey.com) gets
 out there."<br>
 Matt Armstrong on <em>gnus.ding</em>
