@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Wed Apr 24 20:03:07 2002 -->
+<!-- Thu May 23 13:29:38 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -189,6 +189,10 @@ Sven Neuhaus on <em>freshmeat.net</em>
 "Sure there are other anti-spam programs they can use, but nothing is
 as elegant as TMDA."<br>
 Vincent Danen on the <em>tmda-users mailing list</em>
+<br><br>
+
+"Email is no longer a dreaded advertising nightmare."<br>
+Ed Colmar on the <em>tmda-users mailing list</em>
 <br><br>
 
 "Thanks to TMDA, I don't care if my raw address (matt@lickey.com) gets
