@@ -1,3 +1,7 @@
+2002-05-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* results.ht (Links): Add testimonial from Ed Colmar.
+
 2002-05-21  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* resources.ht (Links): Link to Mate Wierdl's tmda4ezmlm script.
